sjengida/g0/f_in_check
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/f_in_check/src/moves.c:1336:16: error: use of undeclared identifier 'knight_o_3'
if ( target == knight_o_3[lh] + wking_loc ) 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/f_in_check/src/moves.c:1600:16: error: use of undeclared identifier 'knight_o_3'
if ( target == knight_o_3[lbg] + bking_loc ) 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/f_in_check/src/obj/moves.o] Error 1
